kubernetes/aiostreams/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aiostreams
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
